# Job-Maket-Projet-Fil-Rouge

./: .bash_history  .bashrc  .gitattributes  .gitignore  .viminfo  GetSourceCodeLinkedin.py  LinkedInHTML.html  LinkedInWebScrapingBFS.py  LinkedInWebscraping.py  LinkedInWebscraping2.py  LinkedInWebscraping3.py  LinkedInWebscraping4.py  PE_database_20240119105642.csv  PE_database_20240119105642.json  PE_database_20240119142538.json  PE_database_20240122004859.csv  PE_database_20240122004859.json  PE_scrapping_20240414_002615_data architect.json  PE_scrapping_20240511_152659_data engineer.json  Presentation_Jobmarket_02.pptx  README.md  Scrap_welcome_BS_SeleniumV2.1.py  adzuna_job_search.py  bulk_script.py  index_jobmarket.txt  info_emploi.csv  linkedin_page.html  linkedinjobs.csv  main.py  mainV2.0.py  mainV4.py  mainV4_Ubuntu.py  requirement.txt  requirements.txt
.docker/: .token_seed
.npm/: anonymous-cli-metrics.json
.ssh/: authorized_keys  id_ed25519  id_ed25519.pub  (+1 more)
Data scraping/: main_wttj.py  pyproject.toml
Data scraping/Indeed/: delete_duplicates.ipynb  import_delete_duplicates.ipynb  job_link_extractor.py  main.py  main_v2.py  requirements.txt
Data scraping/Indeed/old_files/: main.py
Data scraping/Indeed/scripts_python/: job_link_extractor.py  main.py  reformat.py
Data scraping/scrap_wttj/: constants.py  correction_json.py  data_extraction.py  delete_duplicates.ipynb  file_operations.py  pagination_functions.py  wttj_database_no_duplicates.json  wttj_database_old.json
Data scraping/wttj/: main_wttj.py
Data scraping/wttj/scrap_wttj/: constants.py
(+381 files in other folders)
