[tool.poetry]
name = "DE_jobmarket"
version = "0.1.0"
description = ""
authors = ["MoSizzle87 <mohamed.ek.gassama@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selectolax = "^0.3.21"
logging = "^0.4.9.6"
validators = "^0.28.1"
fake-useragent = "^1.5.1"
httpx = "^0.27.0"
playwright = "^1.43.0"
aiofiles = "^23.2.1"
jupyter = "^1.0.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
